--- a/Day01/style.css
+++ b/Day01/style.css
@@ -5,6 +5,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #1A1B26;
 }
 
 ul {
@@ -20,8 +21,8 @@ ul li {
     width: 60px;
     height: 60px;
     margin: 0 30px;
-    transform: rotate(-30deg) skew(25deg);
-    background: #ccc;
+    transform: rotate(-25deg) skew(25deg);
+    background: #1A1B26;
 }
 
 ul li span{
@@ -64,21 +65,21 @@ ul li:hover span:nth-child(1){
     opacity: 0.2;
 }
 ul li:nth-child(1) span{
-    background-color: #3b5999;
+    background-color: #d9763d;
 }
 
 ul li:nth-child(2) span{
-    background-color: #55acee;
+    background-color: #d9763d;
 }
 
 ul li:nth-child(3) span{
-    background-color: #dd4b39;
+    background-color: #d9763d;
 }
 
 ul li:nth-child(4) span{
-    background-color: #0077b5;
+    background-color: #d9763d;
 }
 
 ul li:nth-child(5) span{
-    background-color: #e4405f;
+    background-color: #d9763d;
 }
